Fix text input overflowing forms due to box-sizing.

--- a/src/common.css
+++ b/src/common.css
@@ -17,6 +17,7 @@ a:active {
   padding: 7px;
   border: solid 1px #aaaaaa;
   border-radius:4px;
+  box-sizing: border-box;
 }
 
 .button {
